--- a/build-ImgProc-Desktop_Qt_6_4_1_MSVC2019_64bit-Debug/Makefile.Release
+++ b/build-ImgProc-Desktop_Qt_6_4_1_MSVC2019_64bit-Debug/Makefile.Release
@@ -19,7 +19,7 @@ CXXFLAGS      = -nologo -Zc:wchar_t -FS -Zc:rvalueCast -Zc:inline -Zc:strictStri
 INCPATH       = -I..\ImgProc -I. -I"C:\Program Files (x86)\opencv\build\include" -I"C:\Program Files (x86)\opencv\build\x64\vc14" -IC:\Qt\6.4.1\msvc2019_64\include -IC:\Qt\6.4.1\msvc2019_64\include\QtWidgets -IC:\Qt\6.4.1\msvc2019_64\include\QtGui -IC:\Qt\6.4.1\msvc2019_64\include\QtCore -Irelease -I. -I/include -IC:\Qt\6.4.1\msvc2019_64\mkspecs\win32-msvc 
 LINKER        = link
 LFLAGS        = /NOLOGO /DYNAMICBASE /NXCOMPAT /OPT:REF /OPT:ICF /INCREMENTAL:NO /SUBSYSTEM:WINDOWS "/MANIFESTDEPENDENCY:type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' publicKeyToken='6595b64144ccf1df' language='*' processorArchitecture='*'"
-LIBS          = "C:\Program Files (x86)\opencv\build\bin\*.dll" /LIBPATH:"C:\Program Files (x86)\opencv\build\x64\vc14\lib" "C:\Program Files (x86)\opencv\build\x64\vc14\lib\opencv_world460.lib" C:\Qt\6.4.1\msvc2019_64\lib\Qt6Widgets.lib C:\Qt\6.4.1\msvc2019_64\lib\Qt6Gui.lib C:\Qt\6.4.1\msvc2019_64\lib\Qt6Core.lib C:\Qt\6.4.1\msvc2019_64\lib\Qt6EntryPoint.lib shell32.lib  
+LIBS          = "C:\Program Files (x86)\opencv\build\x64\vc14\bin\*.lib" /LIBPATH:"C:\Program Files (x86)\opencv\build\x64\vc14\lib" "C:\Program Files (x86)\opencv\build\x64\vc14\lib\opencv_world460.lib" C:\Qt\6.4.1\msvc2019_64\lib\Qt6Widgets.lib C:\Qt\6.4.1\msvc2019_64\lib\Qt6Gui.lib C:\Qt\6.4.1\msvc2019_64\lib\Qt6Core.lib C:\Qt\6.4.1\msvc2019_64\lib\Qt6EntryPoint.lib shell32.lib  
 QMAKE         = C:\Qt\6.4.1\msvc2019_64\bin\qmake.exe
 DEL_FILE      = del
 CHK_DIR_EXISTS= if not exist
@@ -1452,7 +1452,9 @@ release\mainwindow.obj: ..\ImgProc\mainwindow.cpp ..\ImgProc\mainwindow.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qdatetime.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qcalendar.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qlocale.h \
-		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qdialog.h
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qdialog.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QMessageBox \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qmessagebox.h
 
 release\moc_mainwindow.obj: release\moc_mainwindow.cpp 
 
