--- a/build-ImgProc-Desktop_Qt_6_4_1_MSVC2019_64bit-Release/Makefile.Debug
+++ b/build-ImgProc-Desktop_Qt_6_4_1_MSVC2019_64bit-Release/Makefile.Debug
@@ -1453,7 +1453,9 @@ debug\mainwindow.obj: ..\ImgProc\mainwindow.cpp ..\ImgProc\mainwindow.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qdatetime.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qcalendar.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qlocale.h \
-		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qdialog.h
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qdialog.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QMessageBox \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qmessagebox.h
 
 debug\moc_mainwindow.obj: debug\moc_mainwindow.cpp 
 
