--- a/build-ImgProc-Desktop_Qt_6_4_1_MSVC2019_64bit-Release/Makefile.Release
+++ b/build-ImgProc-Desktop_Qt_6_4_1_MSVC2019_64bit-Release/Makefile.Release
@@ -1452,7 +1452,9 @@ release\mainwindow.obj: ..\ImgProc\mainwindow.cpp ..\ImgProc\mainwindow.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qdatetime.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qcalendar.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qlocale.h \
-		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qdialog.h
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qdialog.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QMessageBox \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qmessagebox.h
 
 release\moc_mainwindow.obj: release\moc_mainwindow.cpp 
 
