--- a/build-ImgProc-Desktop_Qt_6_4_1_MSVC2019_64bit-Release/Makefile.Release
+++ b/build-ImgProc-Desktop_Qt_6_4_1_MSVC2019_64bit-Release/Makefile.Release
@@ -1443,6 +1443,57 @@ release\mainwindow.obj: ..\ImgProc\mainwindow.cpp ..\ImgProc\mainwindow.h \
 		..\ImgProc\Enhancement.h \
 		..\ImgProc\Segmentation.h \
 		ui_mainwindow.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\QVariant \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QApplication \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qapplication.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qcoreapplication.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qeventloop.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qcoreapplication_platform.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qjnitypes.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qfuture.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qfutureinterface.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qmutex.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qtsan_impl.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qresultstore.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qfuture_impl.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qthreadpool.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qthread.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qdeadlinetimer.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qelapsedtimer.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qrunnable.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qexception.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qpromise.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtGui\qguiapplication.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtGui\qinputmethod.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qlocale.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtGui\qguiapplication_platform.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QCheckBox \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qcheckbox.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qabstractbutton.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QLabel \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qlabel.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qframe.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtGui\qpicture.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtGui\qtextdocument.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QLineEdit \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qlineedit.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtGui\qtextcursor.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtGui\qtextformat.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtGui\qpen.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtGui\qtextoption.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QPushButton \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qpushbutton.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QStatusBar \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qstatusbar.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QTextEdit \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qtextedit.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qabstractscrollarea.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QVBoxLayout \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qboxlayout.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qlayout.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qlayoutitem.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qgridlayout.h \
+		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QWidget \
 		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QFileDialog \
 		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qfiledialog.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qdir.h \
@@ -1451,7 +1502,6 @@ release\mainwindow.obj: ..\ImgProc\mainwindow.cpp ..\ImgProc\mainwindow.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qfileinfo.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qdatetime.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qcalendar.h \
-		C:\Qt\6.4.1\msvc2019_64\include\QtCore\qlocale.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qdialog.h \
 		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\QMessageBox \
 		C:\Qt\6.4.1\msvc2019_64\include\QtWidgets\qmessagebox.h
